--- a/production_website/css/index.css
+++ b/production_website/css/index.css
@@ -8,8 +8,9 @@
   max-height: 600px;
   overflow: hidden;
   position: relative;
-  margin: auto;
   background-color: #777777;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Hide the images by default */
@@ -30,8 +31,8 @@
   filter: brightness(50%);
 }
 
-/* Next & previous buttons */
-.prev, .next {
+/* Previous button */
+.prev {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -44,13 +45,26 @@
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+  align-self: flex-start;
 }
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
   border-radius: 3px 0 0 3px;
+  user-select: none;
+  align-self: flex-end;
 }
+
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
@@ -84,8 +98,8 @@
 
 .dot-container {
   position: absolute;
-  left: 50%;
   bottom: 8px;
+  align-self: center;
 }
 
 /* The dots/bullets/indicators */
