--- a/production_website/css/products.css
+++ b/production_website/css/products.css
@@ -65,6 +65,7 @@ Products Section Below
 
 .product_box h2 {
     text-align: center;
+    font-family: "Ubuntu", sans-serif;
 }
 
 .product_box img {
